<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addproductoActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="337dp"
        android:layout_height="245dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="257dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/btnInicio"
            android:hint="Ingresar nombre de Producto"
            android:inputType="textLongMessage"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/btnInicio"
            android:hint="@string/descripci_n_del_producto"
            android:inputType="textLongMessage"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/btnInicio"
            android:hint="@string/precio_del_producto"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="VisualLintTextFieldSize" />


        <Button
            android:id="@+id/agregarProductoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnInicio"
            android:text="@string/btnaddproduct"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="166dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodavicio"
        android:contentDescription="@string/imglogo" />

</androidx.constraintlayout.widget.ConstraintLayout>